--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             <span class="text-primary">Mingoia Jr.</span>
           </h1>
           <div class="subheading mb-5">121 Highland Avenue · Maybrook, NY 12543 · (845) 699-9681 ·
-            <a href="mailto:name@email.com">name@email.com</a>
+            <a href="mailto:jrmingoia@yahoo.com">jrmingoia@yahoo.com</a>
           </div>
           <p class="mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
           <ul class="list-inline list-social-icons mb-0">
@@ -167,13 +167,12 @@
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">University of Colorado Boulder</h3>
-              <div class="subheading mb-3">Bachelor of Science</div>
-              <div>Computer Science - Web Development Track</div>
-              <p>GPA: 3.23</p>
+              <h3 class="mb-0">University at Buffalo</h3>
+              <div class="subheading mb-3">Bachelor of Arts</div>
+              <div>Computer Science</div>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">August 2006 - May 2010</span>
+              <span class="text-primary">August 2015 - July 2018</span>
             </div>
           </div>
 
