--- a/index.html
+++ b/index.html
@@ -65,7 +65,17 @@
 
       <section class="resume-section p-3 p-lg-5 d-flex d-column" id="about">
         <div class="my-auto">
+          <style>
+          body{
+            background-color: #646464;
+          }
+          </style>
           <h1 class="mb-0">Joseph
+            <style>
+            h1{
+              text-shadow: 1px 1px #FFFFFF;
+            }
+            </style>
             <span class="text-primary">Mingoia Jr.</span>
           </h1>
           <div class="subheading mb-5">121 Highland Avenue · Maybrook, NY 12543 · (845) 699-9681 ·
