Changed background color and added some text shadowing for contrast

--- a/index.html
+++ b/index.html
@@ -2,6 +2,20 @@
 <html lang="en">
 
   <head>
+    <style>
+    h3{
+      text-shadow: 0.5px 0.5px #FFFFFF;
+    }
+    h1{
+      text-shadow: 1px 1px #FFFFFF;
+    }
+    p{
+      color: #EEEEEE;
+      text-shadow: 1px 1px #000000;
+    }
+    
+
+    </style>
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -29,7 +43,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
       <a class="navbar-brand js-scroll-trigger" href="#page-top">
-        <span class="d-block d-lg-none">Start Bootstrap</span>
+        <span class="d-block d-lg-none">Joe</span>
         <span class="d-none d-lg-block">
           <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/coming_soon.png" alt="">
         </span>
@@ -72,9 +86,7 @@
           </style>
           <h1 class="mb-0">Joseph
             <style>
-            h1{
-              text-shadow: 1px 1px #FFFFFF;
-            }
+
             </style>
             <span class="text-primary">Mingoia Jr.</span>
           </h1>
